--- a/surespot/src/main/res/layout/activity_change_password.xml
+++ b/surespot/src/main/res/layout/activity_change_password.xml
@@ -1,14 +1,14 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp"
-        tools:context=".ChangePasswordActivity" >
+        tools:context=".ChangePasswordActivity">
 
         <TextView
             android:id="@+id/tvChangePasswordWarning"
@@ -32,8 +32,7 @@
             android:layout_width="fill_parent"
             android:layout_height="40dp"
             android:layout_marginTop="5dp"
-            android:textSize="16sp" >
-        </Spinner>
+            android:textSize="16sp"></Spinner>
 
         <TextView
             android:id="@+id/textView2"
@@ -82,13 +81,13 @@
 
         <Button
             android:id="@+id/bChangePassword"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:text="@string/change_password"
-            android:textColor="@color/surespotBlue" >
-        </Button>
+            android:textColor="@color/surespotBlue"></Button>
 
         <View
             android:layout_width="match_parent"
