--- a/surespot/src/main/res/layout/activity_import_identity.xml
+++ b/surespot/src/main/res/layout/activity_import_identity.xml
@@ -143,6 +143,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/select_google_drive_account"
+                    style="?android:attr/borderlessButtonStyle"
                     android:textColor="@color/surespotBlue" >
                 </Button>
             </LinearLayout>
