--- a/surespot/src/main/res/layout/activity_login.xml
+++ b/surespot/src/main/res/layout/activity_login.xml
@@ -1,14 +1,14 @@
- <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="10dp"
-        tools:context=".LoginActivity" >
+        tools:context=".LoginActivity">
 
         <TextView
             android:id="@+id/textView2"
@@ -20,8 +20,8 @@
             android:id="@+id/spinnerUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="20dp"
             android:imeOptions="actionNext" />
 
         <TextView
@@ -41,20 +41,19 @@
 
         <CheckBox
             android:id="@+id/cbSavePassword"
-            android:text="@string/store_password_in_keychain"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-             >
-        </CheckBox>
+            android:text="@string/store_password_in_keychain"></CheckBox>
 
         <Button
             android:id="@+id/bLogin"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="20dp"
             android:text="@string/login"
             android:textColor="@color/surespotBlue" />
 
