--- a/surespot/src/main/res/layout/activity_signup.xml
+++ b/surespot/src/main/res/layout/activity_signup.xml
@@ -90,6 +90,7 @@
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
             android:text="@string/create_identity"
+            style="?android:attr/borderlessButtonStyle"
             android:textColor="@color/surespotBlue" />
 
         <View
