--- a/surespot/src/main/res/layout/chat_fragment.xml
+++ b/surespot/src/main/res/layout/chat_fragment.xml
@@ -5,6 +5,13 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
+    <Button
+        android:id="@+id/export_chats"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/export_chats" />
+
     <ListView
         android:id="@+id/message_list"
         android:layout_width="match_parent"
